Добавляет исправления по части 2.Разметка

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
             <a href="catalog.html" class="navigation-link">Гостиницы</a>
           </li>
         </ul>
-        <button class="search">
+        <button class="search" type="button">
           <span class="visually-hidden">Поиск по сайту</span>
         </button>
-        <button class="likes">
+        <button class="likes" type="button">
           <span class="visually-hidden">Поставить лайк</span>
         </button>
-        <button class="button">Хочу сюда!</button>
+        <a href="#" class="button">Хочу сюда!</a>
       </nav>
     </header>
 
@@ -42,7 +42,7 @@
         </p>
       </section>
       <section class="advantages">
-        <h2 class="advantages-title visually-hidden">Преимущества города</h2>
+        <h2 class="visually-hidden">Преимущества города</h2>
         <ul class="advantages-list">
           <li class="advantages-item">
             <h3 class="advantages-subtitle">Настоящий городок</h3>
@@ -107,15 +107,15 @@
         </ul>
       </section>
       <section class="hotel-search">
-        <h2 class="hotel-search-title visually-hidden">Поиск гостинницы</h2>
+        <h2 class="visually-hidden">Поиск гостинницы</h2>
         <p class="hotel-search-text">Заинтересовались?</p>
         <p class="hotel-search-text">
           Укажите предполагаемые даты поездки,и мы покажем вам лучшие
           предложения гостиниц в Седоне
         </p>
-        <button class="button hotel-search-button">
+        <a href="#" class="button hotel-search-button">
           Поиск гостиницы в седоне
-        </button>
+        </a>
       </section>
     </main>
 
@@ -135,11 +135,11 @@
             class="subscribe-email"
             placeholder="Ваш e-mail"
           />
-          <button class="subcribe-button">Подписаться</button>
+          <button class="subscribe-button" type="button">Подписаться</button>
         </form>
       </section>
       <section class="contacts">
-        <h2 class="contacts-title visually-hidden">Контактная информация</h2>
+        <h2 class="visually-hidden">Контактная информация</h2>
         <ul class="social-list">
           <li class="social-item">
             <a
