--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
     <header class="page-header">
       <nav class="navigation">
         <a class="logo"
-          ><img src="index.html" alt="логотип Седоны" class="logo-pic"
+          ><img src="#" alt="логотип Седоны" class="logo-pic"
         /></a>
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -22,13 +22,13 @@
             <a class="navigation-link navigation-link-current">Гостиницы</a>
           </li>
         </ul>
-        <button class="search">
+        <button class="search" type="button">
           <span class="visually-hidden">Поиск по сайту</span>
         </button>
-        <button class="likes">
+        <button class="likes" type="button">
           <span class="visually-hidden">Поставить лайк</span>
         </button>
-        <button class="button">Хочу сюда!</button>
+        <a href="#" class="order-link">Хочу сюда!</a>
       </nav>
     </header>
 
@@ -143,17 +143,17 @@
         </select>
         <ul class="select-buttons">
           <li class="select-button">
-            <button>
+            <button type="button">
               <span class="visually-hidden">Показать карточками</span>
             </button>
           </li>
           <li class="select-button">
-            <button>
+            <button type="button">
               <span class="visually-hidden">Показать по одиночке</span>
-            </button>
+            </button type="button">
           </li>
           <li class="select-button">
-            <button>
+            <button type="button">
               <span class="visually-hidden"></span>Показать списком
             </button>
           </li>
@@ -166,12 +166,12 @@
               class="hotel-photo"
             />
             <h3 class="hotel-name">Amara Resort & Spa</h3>
-            <p class="hotel-type">Гостиница</p>
-            <p class="hotel-price">От 4000 ₽</p>
+            <span class="hotel-type">Гостиница</span>
+            <span class="hotel-price">От 4000 ₽</span>
             <a class="hotel-link" href="#">подробнее</a
-            ><button class="button favourite-button">в избранное</button
+            ><button class="button favourite-button" type="button">в избранное</button
             ><img src="#" alt="4 звезды" class="hotel-stars" />
-            <p class="hotel-rating">Рейтинг: 8,5</p>
+            <span class="hotel-rating">Рейтинг: 8,5</span>
           </li>
           <li class="hotel-item">
             <img
@@ -180,12 +180,12 @@
               class="hotel-photo"
             />
             <h3 class="hotel-name">Villas at Poco Diablo</h3>
-            <p class="hotel-type">Гостиница</p>
-            <p class="hotel-price">От 5000 ₽</p>
+            <span class="hotel-type">Гостиница</span>
+            <span class="hotel-price">От 5000 ₽</span>
             <a class="hotel-link" href="#">подробнее</a
-            ><button class="button favourite-button">В избранном</button
+            ><button class="button favourite-button" type="button">В избранном</button
             ><img src="#" alt="4 звезды" class="hotel-stars" />
-            <p class="hotel-rating">Рейтинг: 9,2</p>
+            <span class="hotel-rating">Рейтинг: 9,2</span>
           </li>
           <li class="hotel-item">
             <img
@@ -194,12 +194,12 @@
               class="hotel-photo"
             />
             <h3 class="hotel-name">Desert Quail Inn</h3>
-            <p class="hotel-type">Гостиница</p>
-            <p class="hotel-price">От 2500 ₽</p>
+            <span class="hotel-type">Гостиница</span>
+            <span class="hotel-price">От 2500 ₽</span>
             <a class="hotel-link" href="#">подробнее</a
-            ><button class="button favourite-button">в избранное</button
+            ><button class="button favourite-button" type="button">в избранное</button
             ><img src="№" alt="3 звезды" class="hotel-stars" />
-            <p class="hotel-rating">Рейтинг: 6,9</p>
+            <span class="hotel-rating">Рейтинг: 6,9</span>
           </li>
           <li class="hotel-item">
             <img
@@ -208,12 +208,12 @@
               class="hotel-photo"
             />
             <h3 class="hotel-name">GreenTree Inn</h3>
-            <p class="hotel-type">Гостиница</p>
-            <p class="hotel-price">От 1500 ₽</p>
+            <span class="hotel-type">Гостиница</span>
+            <span class="hotel-price">От 1500 ₽</span>
             <a class="hotel-link" href="#">подробнее</a
-            ><button class="button favourite-button">в избранное</button
+            ><button class="button favourite-button" type="button">в избранное</button
             ><img src="#" alt="2 звезды" class="hotel-stars" />
-            <p class="hotel-rating">Рейтинг: 5,0</p>
+            <span class="hotel-rating">Рейтинг: 5,0</span>
           </li>
         </ul>
         <ul class="pagination">
@@ -255,11 +255,11 @@
             class="subscribe-email"
             placeholder="Ваш e-mail"
           />
-          <button class="subcribe-button">Подписаться</button>
+          <button class="subscribe-button" type="button">Подписаться</button>
         </form>
       </section>
       <section class="contacts">
-        <h2 class="contacts-title visually-hidden">Контактная информация</h2>
+        <h2 class="visually-hidden">Контактная информация</h2>
         <ul class="social-list">
           <li class="social-item">
             <a
