--- a/catalog.html
+++ b/catalog.html
@@ -7,10 +7,8 @@
   </head>
   <body>
     <header class="page-header">
+      <a class="logo"><img src="#" alt="логотип Седоны" class="logo-pic" /></a>
       <nav class="navigation">
-        <a class="logo"
-          ><img src="#" alt="логотип Седоны" class="logo-pic"
-        /></a>
         <ul class="navigation-list">
           <li class="navigation-item">
             <a href="index.html" class="navigation-link">Главная</a>
@@ -22,20 +20,20 @@
             <a class="navigation-link navigation-link-current">Гостиницы</a>
           </li>
         </ul>
-        <button class="search" type="button">
-          <span class="visually-hidden">Поиск по сайту</span>
-        </button>
-        <button class="likes" type="button">
-          <span class="visually-hidden">Поставить лайк</span>
-        </button>
-        <a href="#" class="order-link">Хочу сюда!</a>
       </nav>
+      <button class="search" type="button">
+        <span class="visually-hidden">Поиск по сайту</span>
+      </button>
+      <a class="likes" href="#">
+        <span class="visually-hidden">Перейти в избранное</span>
+      </a>
+      <a href="#" class="order-link">Хочу сюда!</a>
     </header>
 
     <main class="main-inner">
       <header class="inner-header">
         <h1 class="inner-header-title">Гостиницы Седоны</h1>
-        <ul class="breadcrumbs">
+        <ol class="breadcrumbs">
           <li class="breadcrumbs-item">
             <a href="index.html" class="breadcrumbs-link"
               ><span class="visually-hidden">Главная</span></a
@@ -44,7 +42,7 @@
           <li class="breadcrumbs-item">
             <a class="breadcrumbs-link">Гостиницы</a>
           </li>
-        </ul>
+        </ol>
       </header>
       <section class="hotels-filter">
         <h2 class="hotels-filter-title">Фильтры для выбора отеля</h2>
@@ -82,22 +80,25 @@
             <legend class="hotels-filter-title">Тип жилья:</legend>
             <label class="control"
               ><input
-                name="hotel"
+                name="hotel-type"
                 type="radio"
                 class="control-input"
+                value="hotel"
                 checked
               />Гостиница</label
             ><label class="control"
               ><input
-                name="motel"
+                name="hotel-type"
                 type="radio"
                 class="control-input"
+                value="motel"
               />Мотель</label
             ><label class="control"
               ><input
-                name="apartments"
+                name="hotel-type"
                 type="radio"
                 class="control-input"
+                value="apartments"
               />Апартаменты</label
             >
           </fieldset>
@@ -135,7 +136,9 @@
       </section>
       <section class="hotels-catalog">
         <h2 class="hotels-catalog-title">Каталог отелей</h2>
-        <p class="hotels-catalog-result">Найдено гостиниц: 38</p>
+        <p class="hotels-catalog-result">
+          Найдено гостиниц: <span class="hotels-catalog-result-number">38</span>
+        </p>
         <select class="select-control" aria-label="Сортировка">
           <option value="cheap">Сначала дешевые</option>
           <option value="expensive">Сначала дорогие</option>
@@ -150,7 +153,7 @@
           <li class="select-button">
             <button type="button">
               <span class="visually-hidden">Показать по одиночке</span>
-            </button type="button">
+            </button>
           </li>
           <li class="select-button">
             <button type="button">
@@ -169,7 +172,8 @@
             <span class="hotel-type">Гостиница</span>
             <span class="hotel-price">От 4000 ₽</span>
             <a class="hotel-link" href="#">подробнее</a
-            ><button class="button favourite-button" type="button">в избранное</button
+            ><button class="button favourite-button" type="button">
+              в избранное</button
             ><img src="#" alt="4 звезды" class="hotel-stars" />
             <span class="hotel-rating">Рейтинг: 8,5</span>
           </li>
@@ -183,7 +187,8 @@
             <span class="hotel-type">Гостиница</span>
             <span class="hotel-price">От 5000 ₽</span>
             <a class="hotel-link" href="#">подробнее</a
-            ><button class="button favourite-button" type="button">В избранном</button
+            ><button class="button favourite-button" type="button">
+              В избранном</button
             ><img src="#" alt="4 звезды" class="hotel-stars" />
             <span class="hotel-rating">Рейтинг: 9,2</span>
           </li>
@@ -197,7 +202,8 @@
             <span class="hotel-type">Гостиница</span>
             <span class="hotel-price">От 2500 ₽</span>
             <a class="hotel-link" href="#">подробнее</a
-            ><button class="button favourite-button" type="button">в избранное</button
+            ><button class="button favourite-button" type="button">
+              в избранное</button
             ><img src="№" alt="3 звезды" class="hotel-stars" />
             <span class="hotel-rating">Рейтинг: 6,9</span>
           </li>
@@ -211,12 +217,13 @@
             <span class="hotel-type">Гостиница</span>
             <span class="hotel-price">От 1500 ₽</span>
             <a class="hotel-link" href="#">подробнее</a
-            ><button class="button favourite-button" type="button">в избранное</button
+            ><button class="button favourite-button" type="button">
+              в избранное</button
             ><img src="#" alt="2 звезды" class="hotel-stars" />
             <span class="hotel-rating">Рейтинг: 5,0</span>
           </li>
         </ul>
-        <ul class="pagination">
+        <ol class="pagination">
           <li class="pagination-item">
             <a href="#" class="pagination-link">1</a>
           </li>
@@ -235,11 +242,8 @@
           <li class="pagination-item">
             <a href="#" class="pagination-link">10</a>
           </li>
-        </ul>
+        </ol>
       </section>
-    </main>
-
-    <footer class="page-footer">
       <section class="subscribe subscribe-inner">
         <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
         <p class="subscribe-subtitle">
@@ -258,6 +262,9 @@
           <button class="subscribe-button" type="button">Подписаться</button>
         </form>
       </section>
+    </main>
+
+    <footer class="page-footer">
       <section class="contacts">
         <h2 class="visually-hidden">Контактная информация</h2>
         <ul class="social-list">
