--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
   </head>
   <body>
     <header class="page-header">
+      <a class="logo"><img src="#" alt="логотип Седоны" class="logo-pic" /></a>
       <nav class="navigation">
-        <a class="logo"
-          ><img src="#" alt="логотип Седоны" class="logo-pic"
-        /></a>
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link navigation-link-current">Главная</a>
@@ -22,27 +20,34 @@
             <a href="catalog.html" class="navigation-link">Гостиницы</a>
           </li>
         </ul>
-        <button class="search" type="button">
-          <span class="visually-hidden">Поиск по сайту</span>
-        </button>
-        <button class="likes" type="button">
-          <span class="visually-hidden">Поставить лайк</span>
-        </button>
-        <a href="#" class="button">Хочу сюда!</a>
       </nav>
+      <button class="search" type="button">
+        <span class="visually-hidden">Поиск по сайту</span>
+      </button>
+      <a class="likes" href="#">
+        <span class="visually-hidden">Перейти в избранное</span>
+      </a>
+      <a href="#" class="button">Хочу сюда!</a>
     </header>
 
     <main class="main-index">
       <section class="hero">
-        <h1 class="hero-title">
-          Седона — небольшой городок в Аризоне, заслуживающий большего!
-        </h1>
-        <p class="hero-subtitle">
-          Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
-        </p>
+        <h1 class="visually-hidden">город Седона</h1>
+        <img src="#" alt="горы в Седоне" class="hero-pic-mountains" />
+        <img
+          src="#"
+          alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks"
+          class="hero-pic-text"
+        />
       </section>
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества города</h2>
+        <p class="advantages-title">
+          Седона — небольшой городок в Аризоне, заслуживающий большего!
+        </p>
+        <p class="advantages-description">
+          Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
+        </p>
         <ul class="advantages-list">
           <li class="advantages-item">
             <h3 class="advantages-subtitle">Настоящий городок</h3>
@@ -117,9 +122,6 @@
           Поиск гостиницы в седоне
         </a>
       </section>
-    </main>
-
-    <footer class="page-footer">
       <section class="subscribe">
         <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
         <p class="subscribe-subtitle">
@@ -138,6 +140,9 @@
           <button class="subscribe-button" type="button">Подписаться</button>
         </form>
       </section>
+    </main>
+
+    <footer class="page-footer">
       <section class="contacts">
         <h2 class="visually-hidden">Контактная информация</h2>
         <ul class="social-list">
