Добавляет контентные картинки в разметку

--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,14 @@
   </head>
   <body>
     <header class="page-header">
-      <a class="logo"><img src="#" alt="логотип Седоны" class="logo-pic" /></a>
+      <a class="logo"
+        ><img
+          src="images/svg-icons/logo.svg"
+          alt="логотип Седоны"
+          class="logo-pic"
+          width="140"
+          height="70"
+      /></a>
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -157,16 +164,18 @@
           </li>
           <li class="select-button">
             <button type="button">
-              <span class="visually-hidden"></span>Показать списком
+              <span class="visually-hidden">Показать списком</span>
             </button>
           </li>
         </ul>
         <ul class="hotels-list">
           <li class="hotel-item">
             <img
-              src="#"
+              src="images/hotel-search-pictures/hotel-1.jpg"
               alt="Вид из пещеры на звездное небо"
               class="hotel-photo"
+              width="300"
+              height="212"
             />
             <h3 class="hotel-name">Amara Resort & Spa</h3>
             <span class="hotel-type">Гостиница</span>
@@ -174,14 +183,21 @@
             <a class="hotel-link" href="#">подробнее</a
             ><button class="button favourite-button" type="button">
               в избранное</button
-            ><img src="#" alt="4 звезды" class="hotel-stars" />
+            ><img
+              src="images/svg-icons/four-stars-icon.svg"
+              alt="4 звезды"
+              class="hotel-stars"
+              width="90"
+            />
             <span class="hotel-rating">Рейтинг: 8,5</span>
           </li>
           <li class="hotel-item">
             <img
-              src="#"
+              src="images/hotel-search-pictures/hotel-2.jpg"
               alt="вид на горы Poco Diablo и радугу на ними"
               class="hotel-photo"
+              width="300"
+              height="212"
             />
             <h3 class="hotel-name">Villas at Poco Diablo</h3>
             <span class="hotel-type">Гостиница</span>
@@ -189,14 +205,21 @@
             <a class="hotel-link" href="#">подробнее</a
             ><button class="button favourite-button" type="button">
               В избранном</button
-            ><img src="#" alt="4 звезды" class="hotel-stars" />
+            ><img
+              src="images/svg-icons/four-stars-icon.svg"
+              alt="4 звезды"
+              class="hotel-stars"
+              width="90"
+            />
             <span class="hotel-rating">Рейтинг: 9,2</span>
           </li>
           <li class="hotel-item">
             <img
-              src="№"
+              src="./images/hotel-search-pictures/hotel-3.jpg"
               alt="вид на горы и лес у подножия"
               class="hotel-photo"
+              width="300"
+              height="212"
             />
             <h3 class="hotel-name">Desert Quail Inn</h3>
             <span class="hotel-type">Гостиница</span>
@@ -204,14 +227,21 @@
             <a class="hotel-link" href="#">подробнее</a
             ><button class="button favourite-button" type="button">
               в избранное</button
-            ><img src="№" alt="3 звезды" class="hotel-stars" />
+            ><img
+              src="images/svg-icons/three-stars-icon.svg"
+              alt="3 звезды"
+              class="hotel-stars"
+              width="90"
+            />
             <span class="hotel-rating">Рейтинг: 6,9</span>
           </li>
           <li class="hotel-item">
             <img
-              src="№"
+              src="images/hotel-search-pictures/hotel-4.jpg"
               alt="вид на гору и звездное небо"
               class="hotel-photo"
+              width="300"
+              height="212"
             />
             <h3 class="hotel-name">GreenTree Inn</h3>
             <span class="hotel-type">Гостиница</span>
@@ -219,7 +249,12 @@
             <a class="hotel-link" href="#">подробнее</a
             ><button class="button favourite-button" type="button">
               в избранное</button
-            ><img src="#" alt="2 звезды" class="hotel-stars" />
+            ><img
+              src="images/svg-icons/two-stars-icon.svg"
+              alt="2 звезды"
+              class="hotel-stars"
+              width="90"
+            />
             <span class="hotel-rating">Рейтинг: 5,0</span>
           </li>
         </ul>
@@ -293,7 +328,11 @@
         <a href="tel:+78128121212" class="contacts-phone">+7 (812) 812-12-12</a>
       </section>
       <a href="https://htmlacademy.ru/" class="html-academy-logo"
-        ><img src="#" alt="логотип HTML Академии"
+        ><img
+          src="images/svg-icons/html-academy-logo.svg"
+          alt="логотип HTML Академии"
+          width="115"
+          height="33"
       /></a>
     </footer>
   </body>
