--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
   </head>
   <body>
     <header class="page-header">
-      <a class="logo"><img src="#" alt="логотип Седоны" class="logo-pic" /></a>
+      <a class="logo"
+        ><img
+          src="images/svg-icons/logo.svg"
+          alt="логотип Седоны"
+          class="logo-pic"
+          width="140"
+          height="70"
+      /></a>
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -33,11 +40,19 @@
     <main class="main-index">
       <section class="hero">
         <h1 class="visually-hidden">город Седона</h1>
-        <img src="#" alt="горы в Седоне" class="hero-pic-mountains" />
         <img
-          src="#"
+          src="images/hero-picture.jpg"
+          alt="горы в Седоне"
+          class="hero-pic-mountains"
+          width="1200"
+          height="485"
+        />
+        <img
+          src="images/svg-icons/hero-text.svg"
           alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks"
           class="hero-pic-text"
+          width="458"
+          height="352"
         />
       </section>
       <section class="advantages">
@@ -54,7 +69,13 @@
             <p class="advantages-text">
               Седона — не аттракцион для туристов, там течёт своя жизнь
             </p>
-            <img src="#" alt="вид на Седону" class="advantages-pic" />
+            <img
+              src="images/advantages-picture-city.jpg"
+              alt="вид на Седону"
+              class="advantages-pic"
+              width="800"
+              height="385"
+            />
           </li>
           <li class="advantages-item">
             <h3 class="advantages-subtitle">Небольшая площадь</h3>
@@ -79,14 +100,21 @@
             <p class="advantages-text">
               Да, по нему можно пройти! Если вы осмелитесь, разумеется
             </p>
-            <img src="#" alt="вид на мост" class="advantages-pic" />
+            <img
+              src="images/advantages-picture-mountains.jpg"
+              alt="вид на мост"
+              class="advantages-pic"
+              width="800"
+              height="385"
+            />
           </li>
         </ul>
       </section>
       <section class="services">
-        <h2 class="services-title">
+        <h2 class="visually-hidden">Услуги</h2>
+        <p class="services-title">
           Приезжайте в Седону отдохнуть в комфорте и уюте!
-        </h2>
+        </p>
         <p class="services-subtitle">
           Опытный персонал и качественное обслуживание!
         </p>
@@ -171,7 +199,11 @@
         <a href="tel:+78128121212" class="contacts-phone">+7 (812) 812-12-12</a>
       </section>
       <a href="https://htmlacademy.ru/" class="html-academy-logo"
-        ><img src="#" alt="логотип HTML Академии"
+        ><img
+          src="images/svg-icons/html-academy-logo.svg"
+          alt="логотип HTML Академии"
+          width="115"
+          height="33"
       /></a>
     </footer>
   </body>
