Добавляет исправления по 3 разделу

--- a/catalog.html
+++ b/catalog.html
@@ -182,13 +182,11 @@
             <span class="hotel-price">От 4000 ₽</span>
             <a class="hotel-link" href="#">подробнее</a
             ><button class="button favourite-button" type="button">
-              в избранное</button
-            ><img
-              src="images/svg-icons/four-stars-icon.svg"
-              alt="4 звезды"
-              class="hotel-stars"
-              width="90"
-            />
+              в избранное
+            </button>
+            <p class="star 4-star">
+              <span class="visually-hidden">4 звезды.</span>
+            </p>
             <span class="hotel-rating">Рейтинг: 8,5</span>
           </li>
           <li class="hotel-item">
@@ -204,13 +202,11 @@
             <span class="hotel-price">От 5000 ₽</span>
             <a class="hotel-link" href="#">подробнее</a
             ><button class="button favourite-button" type="button">
-              В избранном</button
-            ><img
-              src="images/svg-icons/four-stars-icon.svg"
-              alt="4 звезды"
-              class="hotel-stars"
-              width="90"
-            />
+              В избранном
+            </button>
+            <p class="star 4-star">
+              <span class="visually-hidden">4 звезды.</span>
+            </p>
             <span class="hotel-rating">Рейтинг: 9,2</span>
           </li>
           <li class="hotel-item">
@@ -226,13 +222,11 @@
             <span class="hotel-price">От 2500 ₽</span>
             <a class="hotel-link" href="#">подробнее</a
             ><button class="button favourite-button" type="button">
-              в избранное</button
-            ><img
-              src="images/svg-icons/three-stars-icon.svg"
-              alt="3 звезды"
-              class="hotel-stars"
-              width="90"
-            />
+              в избранное
+            </button>
+            <p class="star 3-star">
+              <span class="visually-hidden">3 звезды.</span>
+            </p>
             <span class="hotel-rating">Рейтинг: 6,9</span>
           </li>
           <li class="hotel-item">
@@ -248,13 +242,11 @@
             <span class="hotel-price">От 1500 ₽</span>
             <a class="hotel-link" href="#">подробнее</a
             ><button class="button favourite-button" type="button">
-              в избранное</button
-            ><img
-              src="images/svg-icons/two-stars-icon.svg"
-              alt="2 звезды"
-              class="hotel-stars"
-              width="90"
-            />
+              в избранное
+            </button>
+            <p class="star 2-star">
+              <span class="visually-hidden">2 звезды.</span>
+            </p>
             <span class="hotel-rating">Рейтинг: 5,0</span>
           </li>
         </ul>
