Добавляет исправления по 4 разделу (Базовая стилизация)

--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="page-header">
-      <a class="logo"
+      <a href="index.html" class="logo"
         ><img
           src="images/svg-icons/logo.svg"
           alt="логотип Седоны"
