Добавляет исправления по вчерашнему созвону

--- a/catalog.html
+++ b/catalog.html
@@ -50,8 +50,10 @@
     <!-- ОСНОВНОЕ СОДЕРЖИМОЕ -->
     <main class="main-inner">
 
-      <!-- БЛОК С ЗАГОЛОВКОМ И ХЛЕБНЫМИ КРОШКАМИ -->
+      <!-- ОБЕРТКА ДЛЯ ЗАГОЛОВКА С ХЛЕБНЫМИ КРОШКАМИ И ФИЛЬТРА ОТЕЛЕЙ -->
       <div class="wrapper">
+
+        <!-- ЗАГОЛОВОК С ХЛЕБНЫМИ КРОШКАМИ -->
         <header class="inner-header">
           <h1 class="inner-header-title">Гостиницы Седоны</h1>
           <ol class="breadcrumbs">
@@ -183,7 +185,7 @@
             <span class="hotels-catalog-result-number">38</span>
           </p>
           <select class="select-control" aria-label="Сортировка">
-            <option value="cheap">Сначала дешевые</option>
+            <option value="cheap" selected>Сначала дешевые</option>
             <option value="expensive">Сначала дорогие</option>
             <option value="popular">Сначала популярные</option>
           </select>
