--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-
     <!-- ШАПКА САЙТА -->
     <header class="page-header">
-
       <!-- ЛОГОТИП -->
       <a class="logo"
         ><img
@@ -50,7 +48,6 @@
 
     <!-- ОСНОВНОЕ СОДЕРЖИМОЕ -->
     <main class="main-index">
-
       <!-- ПРОМО-БЛОК -->
       <section class="hero">
         <h1 class="visually-hidden">город Седона</h1>
@@ -74,21 +71,19 @@
         </p>
         <ul class="advantages-list">
           <li class="advantages-item advantages-item-wide">
-            <div class="advantages-wrapper">
-              <div class="advantages-text-block">
-                <h3 class="advantages-subtitle">Настоящий городок</h3>
-                <p class="advantages-text">
-                  Седона — не аттракцион для туристов, там течёт своя жизнь
-                </p>
-              </div>
-              <img
-                src="images/advantages-picture-city.jpg"
-                alt="вид на Седону"
-                class="advantages-pic"
-                width="800"
-                height="385"
-              />
+            <div class="advantages-text-block">
+              <h3 class="advantages-subtitle">Настоящий городок</h3>
+              <p class="advantages-text">
+                Седона — не аттракцион для туристов, там течёт своя жизнь
+              </p>
             </div>
+            <img
+              src="images/advantages-picture-city.jpg"
+              alt="вид на Седону"
+              class="advantages-pic"
+              width="800"
+              height="385"
+            />
           </li>
           <li class="advantages-item">
             <h3 class="advantages-subtitle">Небольшая площадь</h3>
@@ -108,25 +103,23 @@
               Большинство едет в Гранд Каньон и толпится там
             </p>
           </li>
-          <li class="advantages-item advantages-item-wide">
-            <div class="advantages-wrapper">
-              <div class="advantages-text-block">
-                <h3 class="advantages-subtitle">
-                  Там есть<br />
-                  мост дьявола
-                </h3>
-                <p class="advantages-text">
-                  Да, по нему можно пройти! Если вы осмелитесь, разумеется
-                </p>
-              </div>
-              <img
-                src="images/advantages-picture-mountains.jpg"
-                alt="вид на мост"
-                class="advantages-pic"
-                width="800"
-                height="385"
-              />
+          <li class="advantages-item advantages-item-wide advantages-item-wide-reverse">
+            <div class="advantages-text-block">
+              <h3 class="advantages-subtitle">
+                Там есть<br />
+                мост дьявола
+              </h3>
+              <p class="advantages-text">
+                Да, по нему можно пройти! Если вы осмелитесь, разумеется
+              </p>
             </div>
+            <img
+              src="images/advantages-picture-mountains.jpg"
+              alt="вид на мост"
+              class="advantages-pic"
+              width="800"
+              height="385"
+            />
           </li>
         </ul>
       </section>
@@ -205,7 +198,6 @@
 
     <!-- ПОДВАЛ САЙТА -->
     <footer class="page-footer">
-
       <!-- КОНТАКТЫ -->
       <section class="contacts">
         <h2 class="visually-hidden">Контактная информация</h2>
